<resources>
    <string name="app_name">MultipleActivities</string>
    <string name="privacy_text">By Continuing you consent to our Terms and Conditions and Privacy Policy</string>
    <string name="sign_in">Sign In</string>
    <string name="button">Button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo_desc">Logo</string>
    <string name="sign_up">Sign Up</string>
    <string name="intro">Let’s keep you in right shape. Receive treatment from doctors in your area</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">SettingsActivity</string>
</resources>